--- a/urbancare_final/Views/User/ViewAllComplaintsByUser.cshtml
+++ b/urbancare_final/Views/User/ViewAllComplaintsByUser.cshtml
@@ -1,11 +1,11 @@
 ﻿@model List<urbancare_final.Models.Problem>
-
+<link rel="stylesheet" href="~/css/viewallcomplaintsbyuser.css" />
 @{
    
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<link rel="stylesheet" href="~/css/viewallcomplaintsbyuser.css" />
+
 <h2>Your Complaints</h2>
 
 <table class="table table-striped">
@@ -21,7 +21,14 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td>@item.Statement</td>
+                <td>
+                    @if (!string.IsNullOrEmpty(item.Photo))
+                    {
+                        var path = item.Photo?.TrimStart('~','/');
+                        <img src="@Url.Content($"~/{path}")" alt="Complaint photo" class="complaint-photo" />
+                    }
+                    <div class="statement-text">@item.Statement</div>
+                </td>
                 <td>@item.ProblemType</td>
                 <td>@item.DateSubmitted.ToShortDateString()</td>
                 <td>@item.DepartmentMaster?.Name</td>
