--- a/urbancare_final/Views/Home/Edit.cshtml
+++ b/urbancare_final/Views/Home/Edit.cshtml
@@ -12,7 +12,7 @@
 
 <div class="edit-profile-container">
     <h2>Edit Profile</h2>
-    <form asp-action="Edit" method="post">
+    <form asp-action="Edit" method="post" enctype="multipart/form-data">
         @if (Model.Role == "Citizen" && Model.User != null)
         {
             <input type="hidden" asp-for="User.Id" />
@@ -23,6 +23,10 @@
             <div class="form-group">
                 <label asp-for="User.Email"></label>
                 <input asp-for="User.Email" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label>Profile Photo (optional)</label>
+                <input type="file" name="PhotoFile" class="form-control" />
             </div>
         }
         else if (Model.Role == "Department" && Model.Department != null)
