--- a/urbancare_final/Views/Home/ViewProfile.cshtml
+++ b/urbancare_final/Views/Home/ViewProfile.cshtml
@@ -11,18 +11,32 @@
     @if (User.IsInRole("Citizen") && Model.User != null)
     {
         <div class="profile-card">
+            @if (!string.IsNullOrEmpty(Model.User.Photo))
+            {
+
+                <img src="@Model.User.Photo" alt="Profile Photo" class="profile-photo" />
+            }
             <p><strong>Name:</strong> @Model.User.Name</p>
             <p><strong>Email:</strong> @Model.User.Email</p>
+            
+
         </div>
     }
     else if (User.IsInRole("Department") && Model.Department != null)
     {
         <div class="profile-card">
+            @if (!string.IsNullOrEmpty(Model.User.Photo))
+            {
+
+                <img src="@Model.User.Photo" alt="Profile Photo" class="profile-photo" />
+            }
             <p><strong>Department Name:</strong> @Model.Department.DepartmentMaster?.Name</p>
             <p><strong>Email:</strong> @Model.Department.Email</p>
             <p><strong>City:</strong> @Model.Department.City</p>
             <p><strong>Zip Code:</strong> @Model.Department.ZipCode</p>
+           
+
         </div>
     }
-    <a class="nav-link" asp-controller="Home" asp-action="Edit">Profile</a>
+    <a class="nav-link" asp-controller="Home" asp-action="Edit"> Edit Profile</a>
 </section>
