Add missing files

--- a/urbancare_final/Views/Home/Edit.cshtml
+++ b/urbancare_final/Views/Home/Edit.cshtml
@@ -48,6 +48,10 @@
                 <label asp-for="Department.ZipCode"></label>
                 <input asp-for="Department.ZipCode" class="form-control" />
             </div>
+            <div class="form-group">
+                <label>Profile Photo (optional)</label>
+                <input type="file" name="PhotoFile" class="form-control" />
+            </div>
         }
         <button type="submit" class="btn btn-success">Save Changes</button>
     </form>
